--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/main.css">
     <title>Document</title>
 </head>
 <body>
     <header>
-        <div class="">
-            <h1>My Library</h1>
-            <button>Add New Book</button>
+        <div class="nav">
+            <div class="nav-text">
+                <h1>My Library</h1>
+            </div>
+            <div class="nav-btn" id="new-book">
+                <button>Add New Book</button>
+            </div>
         </div>
     </header>
     <main>
