--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <h1>My Library</h1>
             </div>
             <div class="nav-btn" id="new-book">
-                <button>Add New Book</button>
+                <button id="new-book-btn">Add New Book</button>
             </div>
         </div>
     </header>
