Add book list table

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- bootstrap css -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- font awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/main.css">
     <title>Document</title>
@@ -20,7 +24,57 @@
         </div>
     </header>
     <main>
-        
+        <br>
+        <div class="collection">
+            <div class="book head dark flex-box">
+                <span class="pd ico col-sm-1"><i class="fas fa-book-reader"></i></span>
+                <span class="pd title col-sm-4">Title</span>
+                <span class="pd author col-sm-3">Author</span>
+                <span class="pd pages col-sm-2">Pages</span>
+                <span class="pd status col-sm-1">Read</span>
+                <span class="pd delete col-sm-1"><i class="fas fa-minus-circle"></i></span>
+            </div>
+            <div class="book light flex-box">
+                <span class="pd ico col-sm-1"><i class="fas fa-book"></i></span>
+                <span class="pd title col-sm-4">Gotham</span>
+                <span class="pd author col-sm-3">Cena JM</span>
+                <span class="pd pages col-sm-2">492</span>
+                <span class="pd status col-sm-1"><i class="fas fa-check"></i></span>
+                <span class="pd delete col-sm-1"><i class="fas fa-trash"></i></span>
+            </div>
+            <div class="book dark flex-box">
+                <span class="pd ico col-sm-1"><i class="fas fa-book"></i></span>
+                <span class="pd title col-sm-4">Peterpan</span>
+                <span class="pd author col-sm-3">Jeff</span>
+                <span class="pd pages col-sm-2">332</span>
+                <span class="pd status col-sm-1"><i class="far fa-square"></i></i></span>
+                <span class="pd delete col-sm-1"><i class="fas fa-trash"></i></span>
+            </div>
+            <div class="book light flex-box">
+                <span class="pd ico col-sm-1"><i class="fas fa-book"></i></span>
+                <span class="pd title col-sm-4">Defend</span>
+                <span class="pd author col-sm-3">Betty</span>
+                <span class="pd pages col-sm-2">602</span>
+                <span class="pd status col-sm-1"><i class="fas fa-check"></i></span>
+                <span class="pd delete col-sm-1"><i class="fas fa-trash"></i></span>
+            </div>
+            <div class="book dark flex-box">
+                <span class="pd ico col-sm-1"><i class="fas fa-book"></i></span>
+                <span class="pd title col-sm-4">Innocent</span>
+                <span class="pd author col-sm-3">George</span>
+                <span class="pd pages col-sm-2">293</span>
+                <span class="pd status col-sm-1"><i class="far fa-square"></i></i></span>
+                <span class="pd delete col-sm-1"><i class="fas fa-trash"></i></span>
+            </div>
+            <div class="book light flex-box">
+                <span class="pd ico col-sm-1"><i class="fas fa-book"></i></span>
+                <span class="pd title col-sm-4">Defend</span>
+                <span class="pd author col-sm-3">Betty</span>
+                <span class="pd pages col-sm-2">602</span>
+                <span class="pd status col-sm-1"><i class="fas fa-check"></i></span>
+                <span class="pd delete col-sm-1"><i class="fas fa-trash"></i></span>
+            </div>
+        </div>
     </main>
 </body>
 </html>
