Add hidden class to model

--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
                 <span class="pd pages col-sm-2">602</span>
                 <span class="pd status col-sm-1"><i class="fas fa-check"></i></span>
                 <span class="pd delete col-sm-1"><i class="fas fa-trash"></i></span>
-        <div id="modal">
+            </div>
+        </div>
+        <div id="modal" class="hidden">
             <div class="form-content">
                 <span class="close">&times;</span>
                 <h3 class="form-heading">Add a book</h3>
