--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </header>
     <main>
         <br>
-        <div class="collection">
+        <div id="collection" class="collection">
             <div class="book head dark flex-box">
                 <span class="pd ico col-sm-1"><i class="fas fa-book-reader"></i></span>
                 <span class="pd title col-sm-4">Title</span>
@@ -34,7 +34,7 @@
                 <span class="pd status col-sm-1">Read</span>
                 <span class="pd delete col-sm-1"><i class="fas fa-minus-circle"></i></span>
             </div>
-            <div class="book light flex-box">
+            <!-- <div class="book light flex-box">
                 <span class="pd ico col-sm-1"><i class="fas fa-book"></i></span>
                 <span class="pd title col-sm-4">Gotham</span>
                 <span class="pd author col-sm-3">Cena JM</span>
@@ -73,7 +73,7 @@
                 <span class="pd pages col-sm-2">602</span>
                 <span class="pd status col-sm-1"><i class="fas fa-check"></i></span>
                 <span class="pd delete col-sm-1"><i class="fas fa-trash"></i></span>
-            </div>
+            </div> -->
         </div>
         <div id="modal" class="hidden">
             <div class="form-content">
@@ -87,7 +87,7 @@
                         <label class="read-txt">Read?</label>
                         <input type="checkbox" name="read-status" id="read">
                     </div>
-                    <input type="submit" value="Add book">
+                    <input type="submit" value="Add book" id="create-book">
                 </form>
             </div>
         </div>
