--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     </header>
     <main>
         <br>
-        <div id="collection" class="collection">
-            <div class="book head dark flex-box">
+        <div class="head">
+            <div class="hd">
                 <span class="pd ico col-sm-1"><i class="fas fa-book-reader"></i></span>
                 <span class="pd title col-sm-4">Title</span>
                 <span class="pd author col-sm-3">Author</span>
@@ -34,46 +34,9 @@
                 <span class="pd status col-sm-1">Read</span>
                 <span class="pd delete col-sm-1"><i class="fas fa-minus-circle"></i></span>
             </div>
-            <!-- <div class="book light flex-box">
-                <span class="pd ico col-sm-1"><i class="fas fa-book"></i></span>
-                <span class="pd title col-sm-4">Gotham</span>
-                <span class="pd author col-sm-3">Cena JM</span>
-                <span class="pd pages col-sm-2">492</span>
-                <span class="pd status col-sm-1"><i class="fas fa-check"></i></span>
-                <span class="pd delete col-sm-1"><i class="fas fa-trash"></i></span>
-            </div>
-            <div class="book dark flex-box">
-                <span class="pd ico col-sm-1"><i class="fas fa-book"></i></span>
-                <span class="pd title col-sm-4">Peterpan</span>
-                <span class="pd author col-sm-3">Jeff</span>
-                <span class="pd pages col-sm-2">332</span>
-                <span class="pd status col-sm-1"><i class="far fa-square"></i></i></span>
-                <span class="pd delete col-sm-1"><i class="fas fa-trash"></i></span>
-            </div>
-            <div class="book light flex-box">
-                <span class="pd ico col-sm-1"><i class="fas fa-book"></i></span>
-                <span class="pd title col-sm-4">Defend</span>
-                <span class="pd author col-sm-3">Betty</span>
-                <span class="pd pages col-sm-2">602</span>
-                <span class="pd status col-sm-1"><i class="fas fa-check"></i></span>
-                <span class="pd delete col-sm-1"><i class="fas fa-trash"></i></span>
-            </div>
-            <div class="book dark flex-box">
-                <span class="pd ico col-sm-1"><i class="fas fa-book"></i></span>
-                <span class="pd title col-sm-4">Innocent</span>
-                <span class="pd author col-sm-3">George</span>
-                <span class="pd pages col-sm-2">293</span>
-                <span class="pd status col-sm-1"><i class="far fa-square"></i></i></span>
-                <span class="pd delete col-sm-1"><i class="fas fa-trash"></i></span>
-            </div>
-            <div class="book light flex-box">
-                <span class="pd ico col-sm-1"><i class="fas fa-book"></i></span>
-                <span class="pd title col-sm-4">Defend</span>
-                <span class="pd author col-sm-3">Betty</span>
-                <span class="pd pages col-sm-2">602</span>
-                <span class="pd status col-sm-1"><i class="fas fa-check"></i></span>
-                <span class="pd delete col-sm-1"><i class="fas fa-trash"></i></span>
-            </div> -->
+        </div>
+        <div id="collection" class="collection">
+            <!-- render JavaScript -->
         </div>
         <div id="modal" class="hidden">
             <div class="form-content">
