change read status toggle button

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <span class="pd title col-sm-4">Title</span>
                 <span class="pd author col-sm-3">Author</span>
                 <span class="pd pages col-sm-2">Pages</span>
-                <span class="pd status col-sm-1">Read</span>
+                <span class="pd col-sm-1">Read</span>
                 <span class="pd delete col-sm-1"><i class="fas fa-minus-circle"></i></span>
             </div>
         </div>
